# wipster

./: .cursorignore  .gitignore  README.md  template_setup.py
.github/api-gateway/: spec.template.yaml
.github/workflows/: backend_deployment.yml  frontend_deployment.yml  manage_command.yml  release.yml  update_api_gateway.yml
backend/: .env.example  .gitignore  API_DOCS.md  Dockerfile  README.md  entrypoint.sh  pytest.ini  requirements.txt
backend/apps/: __init__.py
backend/project/: settings.py  urls.py
backend/tests/: README.md  conftest.py
docs/: PRD.md  Task Manager.html  Task Manager.md  task-manager-prd.md
frontend/: .env.example  .env.local.example  .env.production  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/pages/: _app.js  index.js  login.js  register.js  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent_commands.rs  ai_fill_commands.rs  autocomplete_commands.rs  changelog_commands.rs  chat_commands.rs  context_commands.rs  mod.rs  project_commands.rs  task_commands.rs  tracker_commands.rs
src-tauri/src/db/: connection.rs  migrations.rs  schema.rs
src-tauri/src/models/: changelog.rs  chat.rs  context_snapshot.rs  mod.rs  project.rs  task.rs
src-tauri/src/services/: agent.rs  context_capture.rs  llm_context.rs  logger.rs  mod.rs  tracker.rs  tracker_auth.rs  undo_redo.rs  wip_guard.rs
src-tauri/src/tray/: mod.rs
(+56 files in other folders)
